<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.MenuActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_horizontal"
        android:paddingTop="12dp"
        android:text="@string/label_welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnProfile"
        style="@style/MenuButton"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/ic_profile"
        android:text="@string/btn_edit_profile" />
    <Button
        android:id="@+id/btnCreateAppointmen"
        style="@style/MenuButton"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/ic_add_circle"
        android:text="@string/btn_create_appointment" />

    <Button
        android:id="@+id/btnMyAppointment"
        style="@style/MenuButton"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/ic_schedule"
        android:text="@string/btn_my_appointments" />

    <Button
        android:id="@+id/btnLogout"
        style="@style/MenuButton"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/ic_power_off"
        android:text="@string/btn_log_out" />

    <TextView
        android:id="@+id/tvGoToRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="18dp"
        android:gravity="center"
        android:text="@string/label_go_to_register"
        android:textColor="@color/white" />


</LinearLayout>
