<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".ui.RegisterActivity">

    <TextView
        android:paddingTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:text="@string/label_register"
        android:textColor="@color/white"
        android:layout_weight="1"
        android:background="@drawable/bg_gradient"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:text="@string/label_name" />

        <EditText
            android:id="@+id/etRegisterName"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:text="@string/label_email" />

        <EditText
            android:id="@+id/etRegisterEmail"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:text="@string/label_password" />

        <EditText
            android:id="@+id/etRegisterPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:text="@string/label_password_confirmation" />

        <EditText
            android:id="@+id/etRegisterPasswordConfirmation"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnConfirmRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/btn_register"
            style="@style/Widget.AppCompat.Button.Colored"
            />

        <TextView
            android:id="@+id/tvGoToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="18dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/label_go_to_login" />


    </LinearLayout>


</LinearLayout>
